--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -41,11 +41,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cmdPagamentos"
+        app:layout_constraintTop_toBottomOf="@+id/cmdFinanceiro"
         app:layout_constraintVertical_bias="0.09" />
 
     <Button
-        android:id="@+id/cmdPagamentos"
+        android:id="@+id/cmdFinanceiro"
 
         android:layout_width="130dp"
         android:layout_height="105dp"
