--- a/app/src/main/res/layout/activity_listar_produtos.xml
+++ b/app/src/main/res/layout/activity_listar_produtos.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListarProdutos">
+    tools:context=".produtos.ListarProdutos">
 
     <ListView
         android:id="@+id/listaProdutos"
-        android:layout_width="395dp"
-        android:layout_height="715dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
